--- a/BAI TAP THUC HANH/HAM/baitap1Ham.html
+++ b/BAI TAP THUC HANH/HAM/baitap1Ham.html
@@ -90,27 +90,25 @@
 
 
         // hiển thị ma trận tam giác dưới
-        function drawTamGiacTren(arr) {
+        function hienthiTamGiacTren(arr) {
             for (let i = 0; i < arr.length; i++) {
                 for (let j = 0; j < i; j++) {
                     document.write(arr[i][j]);
-
                 }
                 document.write("<br>");
-
             }
-
         }
 
 
-        // function drawTamGiacDuoi(arr) {
-        //     for (let i = arr.length - 1; i > 0; i--) {
-        //         for (let j = 0; j < i; j++) {
-        //             document.write(arr[i][j])
-        //         }
-        //         document.write("<br>");
-        //     }
-        // }
+        // hiển thị ma trận tam giác trên
+        function hienthiTamGiacDuoi(arr) {
+            for (let i = arr.length - 1; i > 0; i--) {
+                for (let j = 0; j < i; j++) {
+                    document.write(arr[i][j])
+                }
+                document.write("<br>");
+            }
+        }
 
         
 
