--- a/BAI TAP THUC HANH/LAP TRINH HUONG DOI TUONG/xaydunglopHinhChuNhat.html
+++ b/BAI TAP THUC HANH/LAP TRINH HUONG DOI TUONG/xaydunglopHinhChuNhat.html
@@ -11,36 +11,35 @@
 <body>
     <canvas id="myCanvas" width="300px" height="200px" style="border: 1px solid #b62121;"></canvas>
     <script>
-        let Rectangle = function (chieudai, chieurong) {
-            this.chieudai = chieudai;
-            this.chieurong = chieurong;
-            this.getDientich = function () {
-                return chieudai * chieurong;
-            }
-            this.getChuvi = function () {
-                return (chieudai + chieurong) * 2;
-            }
-            this.getChieudai = function () {
-                return this.chieudai;
-            }
-            this.getChieurong = function () {
-                return this.chieurong;
-            }
-        };
-        var hinhchunhat = new Rectangle(200,150);
-        var dientich = hinhchunhat.getDientich();
-        var chuvi = hinhchunhat.getChuvi();
-        document.write(`diện tích hình chữ nhật:  ${dientich} , chu vi hình chữ nhật:  ${chuvi}`);
+        // let Rectangle = function (chieudai, chieurong) {
+        //     this.chieudai = chieudai;
+        //     this.chieurong = chieurong;
+        //     this.getDientich = function () {
+        //         return chieudai * chieurong;
+        //     }
+        //     this.getChuvi = function () {
+        //         return (chieudai + chieurong) * 2;
+        //     }
+        //     this.getChieudai = function () {
+        //         return this.chieudai;
+        //     }
+        //     this.getChieurong = function () {
+        //         return this.chieurong;
+        //     }
+        // };
+        // var hinhchunhat = new Rectangle(200,150);
+        // var dientich = hinhchunhat.getDientich();
+        // var chuvi = hinhchunhat.getChuvi();
+        // document.write(`diện tích hình chữ nhật:  ${dientich} , chu vi hình chữ nhật:  ${chuvi}`);
         
-        function createHcn() {
-            var c = document.getElementById("myCanvas");
-            var ctx = c.getContext("2d");
-            ctx.beginPath()
-            ctx.rect(20, 20, hinhchunhat.getChieudai(), hinhchunhat.getChieurong());
-            ctx.fill();
-        }
-        createHcn();
-
+        // function createHcn() {
+        //     var c = document.getElementById("myCanvas");
+        //     var ctx = c.getContext("2d");
+        //     ctx.beginPath()
+        //     ctx.rect(20, 20, hinhchunhat.getChieudai(), hinhchunhat.getChieurong());
+        //     ctx.fill();
+        // }
+        // createHcn();
     </script>
 </body>
 
