--- a/BAI TAP THUC HANH/MANG VA MANG 2 CHIEU/bt2_Mang2chieu.html
+++ b/BAI TAP THUC HANH/MANG VA MANG 2 CHIEU/bt2_Mang2chieu.html
@@ -16,7 +16,7 @@
                 a[i][j] = Math.floor(Math.random() * ((90 - 10 + 1) + 10));
             }
         }
-        console.log(a);
+        document.write(a);
     </script>
 </body>
 
